# asterism_validator

./: A_star.cpp  A_star.h  Asterism.cpp  Asterism.h  Board.cpp  Board.h  Board_set.cpp  Board_set.h  Board_state.cpp  Board_state.h  CAD_coordinates.h  CMakeLists.txt  Dataset_generator.cpp  Dataset_generator.h  Graphic_viewer.cpp  Graphic_viewer.h  Node.cpp  Node.h  Position.cpp  Position.h  README.md  Search_state.cpp  Search_state.h  Simulation.cpp  Simulation.h  Simulation_manager.cpp  Simulation_manager.h  Simulator.cpp  Simulator.h  State.cpp  State.h  Trajectory_generator.cpp  Trajectory_generator.h  coordinates.h  dataset.h  datasets.h  global_functions.h  helper.h  main.cpp  stlastar.h  (+1 more)
